samples/_failures_safe/1761504680_3117b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30ba3ef4.c: In function ‘main’:
./samples/SAFE/__tmp_30ba3ef4.c:133:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  133 |     struct Token token
      |            ^~~~~
./samples/SAFE/__tmp_30ba3ef4.c:133:12: error: expected declaration or statement at end of input
